# flake8-digit-separator

./: .gitignore  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: coverage.yaml  lint.yaml  tests.yaml
flake8_digit_separator/: checker.py  error.py  types.py
flake8_digit_separator/classifiers/: base.py  classifier.py  classifier_binary.py  classifier_complex.py  classifier_decimal.py  classifier_hex.py  classifier_int.py  classifier_octal.py  classifier_scientific.py  classifiers.py  factory.py  registry.py
flake8_digit_separator/fds_numbers/: base.py  enums.py  fds_numbers.py  types.py
flake8_digit_separator/numbers/: base.py  numbers.py
flake8_digit_separator/rules/: base.py  rules.py
flake8_digit_separator/transformations/: cleaner.py
flake8_digit_separator/validators/: base.py  classifier.py  constants.py  enums.py  factory.py  numbers.py  registry.py  rules.py  types.py  validator_binary.py  validator_decimal.py  validator_hex.py  validator_int.py  validator_octal.py  validators.py
src/: main.py
tests/: test_checker.py  test_classifiers.py  test_error.py  test_exclude_option.py  test_hello_world.py  test_rules.py  test_validators.py  test_validators_base.py  test_validators_registry.py  test_version.py
tests/e2e/: conftest.py  test_correct.py  test_wrong.py
tests/e2e/cases/: correct.py  wrong.py
